--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,6 +10,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .footer {
@@ -40,37 +42,80 @@
 }
 
 .title {
-  margin: 0;
+  margin: 4rem 0;
   line-height: 1.15;
   font-size: 4rem;
 }
 
-.title,
 .description {
+  margin: 4rem 0;
+  font-size: 2rem;
+  width: 100%;
+  background-color: #040404;
+  border: 2px dotted #222;
+  border-radius: 8px;
+  cursor: copy;
+  justify-content: space-around;
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.description:hover {
+  background-color: rgba(34, 34, 34, 0.658);
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
+.decriptionInfo {
+  font-size: 14px;
+  color: #ddd;
+  padding: 1rem;
+  text-decoration: underline;
+  display: inline-block;
+}
+
+.shorteningForm {
+  display: flex;
+}
+
+.longLink {
+  appearance: none;
+  background: #181818;
+  border-radius: 8px 0 0 8px;
+  border: 0;
   padding: 0.75rem;
+  font-family: inherit;
   font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  width: 100%;
+}
+
+.submitBtn {
+  font-weight: 600;
+  border: 0;
+  border-radius: 0 8px 8px 0;
+  background: #ffffff;
+  color: #111;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.submitBtn:hover {
+  background-color: #f2f2f2;
+}
+
+.submitBtn:disabled {
+  background: #ffffffc4;
 }
 
 .grid {
-  display: flex;
+  display: grid;
+  width: 800px;
+  margin: 1rem auto;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+}
+
+.inputSpan {
+  padding: 0.75rem 0;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .card {
@@ -104,14 +149,19 @@
 }
 
 .logo {
-  height: 1em;
   margin-left: 0.5rem;
+  padding: 0 4rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 900px) {
+  .title {
+    font-size: 3.3rem;
+  }
   .grid {
     width: 100%;
-    flex-direction: column;
+  }
+  .description {
+    font-size: 1.3rem;
   }
 }
 
